--- a/atividade2.html
+++ b/atividade2.html
@@ -5,12 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Primeiro Html</title>
+    <style>
+        .conteudo
+        {
+            position: absolute;
+            top: 300px;
+            left: 100px;
+            background: rgba(0, 128, 0, 0.3);
+            opacity: 0.3;
+
+        }
+
+    </style>
 </head>
 <body>
-    Aula de Programação de Aplicativos 
-    <hr>
-    Estamos Iniciando nosso Site
-    <br>
-    <img src="borboleta.gif" width="150px">
+    <div class="conteudo">
+        Aula de Programação de Aplicativos 
+        <hr>
+        Estamos Iniciando nosso Site
+        <br>
+        <img src="borboleta.gif" width="150px">
+    </div>
 </body>
 </html>
